prevent scroll when modal open by adding modalOpen class to body when modal opens which sets position fixed and overflow hidden

--- a/public/assets/styles/less/modal.less
+++ b/public/assets/styles/less/modal.less
@@ -1,3 +1,8 @@
+body.modalOpen {
+  position: fixed;
+  overflow: hidden;
+}
+
 div#modal-backdrop {
   position: absolute;
   width: 100%;
